--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <h1 style="font-size:3.5rem;" class="top-50">
       I'm Abdur Rahman Khan.
     </h1>
-    <h2 class="top-50">a Computer Science Engineer</h2>
+    <h2 class="top-50" style="font-size:30px;">a Computer Science Engineer</h2>
     <br>
     <img class="cloud1" src="images/cloud.png" alt="cloud1">
     <img class="cloud2" src="images/cloud.png" alt="cloud2">
